--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
@@ -28,6 +28,9 @@ dependencies {
     compile 'com.shaishavgandhi:login-buttons:0.1.2'
     compile 'com.google.firebase:firebase-database:12.0.0'
     compile 'com.google.firebase:firebase-auth:12.0.0'
+    compile 'com.android.support:cardview-v7:21.0.+'
+    compile 'com.google.android.gms:play-services-places:12.0.0'
     compile 'com.google.android.gms:play-services-auth:12.0.0'
 }
+
 apply plugin: 'com.google.gms.google-services'
